# TimeTracker

./: .gitignore  README.md  TimeTracker.sln  TimeTracker.spec  createPackage.bat  createPackage.sh  main.py  old_TimeTracker.spec  pyproject.toml  pyvenv.cfg  readme.md  requirements.txt  test_TimeAnalysis.py  test_TimeAnalysis_RealData.py  test_TimeRecordSerializer.py
.github/workflows/: onPush.yml
TestData/: April_to_July.csv  April_to_June.csv  DataFile.csv
TimeTracker/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  TimeTracker.csproj  domain.py  domainModels.py  domainSerialization.py  main.py
TimeTracker.Tests/: TimeRecordRepositoryTests.cs  TimeRecordTests.cs  TimeTracker.Tests.csproj  UnitTest1.cs
TimeTracker/Domain/: Settings.cs  TimeRecord.cs  TimeRecordRepository.cs
TimeTracker/ViewModels/: MainViewModel.cs  TimeRecordViewModel.cs
TimeTrackerTests/: test_domain.py  test_domainSerialization.py
src/: BetterConfigParser.py  Controller.py  EditRecord.ui  EditRecordDialog.py  MainWindow.py  MainWindow.ui  MainWindowQt.py  TimeAnalysis.py  models.py  serializers.py
src/tests/: test_TimeRecordSerializer.py
tests/: test_HumandReadable.py  test_ScopeSummary.py  test_TimeAnalysis.py  test_TimeAnalysis_RealData.py  test_TimeRecordSerializer.py
tests/TestData/: DataFile.csv
timetracking/: BetterConfigParser.py  Controller.py  EditRecordDialog.py  MainWindow.ui  MainWindowQt.py  TimeAnalysis.py  main.py  models.py  serializers.py
