[tool.poetry]
name = "timetracking"
version = "0.1.0"
description = ""
authors = ["Michael Wagner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
appdata = "^2.2.1"
pyqt6 = "^6.7.0"
humanfriendly = "^10.0"
codetiming = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
