[tool.poetry]
name = "timetracking"
version = "0.1.0"
description = ""
authors = ["Michael Wagner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
appdata = "^2.2.1"
pyqt6 = "^6.7.0"
humanfriendly = "^10.0"
codetiming = "^1.4.0"
qdarkstyle = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry-pyinstaller-plugin.scripts]
#TimeTracker = { source = "timetracking/main.py", type = "onedir", bundle = false, windowed = true, icon = "timetracking\\clock.ico" }
#
#[tool.poetry-pyinstaller-plugin.collect]
#data = ['clock.png', 'timetracking/MainWindow.ui']